--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "@apollo/client": "^3.7.17",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
-    "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
     "graphql": "^16.7.1",
-    "lodash": "^4.17.21",
     "next": "^14.2.3",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
@@ -35,8 +31,10 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/lodash": "^4.14.196",
+    "@types/node": "^22.5.5",
     "@types/nprogress": "^0.2.0",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "autoprefixer": "^10.4.14",
